[package]
name = "jarvis-alpha-innotec-planner"
version = "0.1.0"
authors = ["Jorrit Salverda <jorrit.salverda@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
chrono = "0"
chrono-tz = "0.6"
ctor = "0.1.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "0.1.57" }
kube = { version = "0.70.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
quick-xml = { version = "0.22", features = [ "serialize" ] }
tokio = { version = "1", features = ["macros"] }
uuid = { version = "0", features = ["v4"] }
websocket = "0"
