[package]
name = "jarvis-alpha-innotec-planner"
version = "0.1.0"
authors = ["Jorrit Salverda <jorrit.salverda@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
chrono-tz = "0.6"
ctor = "0.1"
jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "0.1.65" }
kube = { version = "0.82", default-features = false, features = ["client", "runtime", "derive"] }
openssl = { version = "0.10", features = ["vendored"] }
quick-xml = { version = "0.22", features = [ "serialize" ] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
rand = "0.8"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0"
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
websocket = "0.26"


